crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_view_box__remove_view_box-3.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_view_box.rs
expression: "test_config(r#\"{ \"removeViewBox\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"100\" height=\"50\" viewBox=\"0, 0, 100, 50\">\n    test\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="50">
    test
</svg>
