crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_view_box__remove_view_box.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_view_box.rs
expression: "test_config(r#\"{ \"removeViewBox\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"100.5\" height=\".5\" viewBox=\"0 0 100.5 .5\">\n    test\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="100.5" height=".5">
    test
</svg>
